[package]
name = "GameBoyEmulator"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
egui = "0.32.3"
egui_wgpu_backend = "0.35.0"
egui_winit_platform = "0.27.0"
epi = "0.17.0"
pollster = "0.4.0"
serde = "1.0.227"
tinyfiledialogs = "3.9.1"
wgpu = "26.0.1"

[lib]
name = "cpu"
path = "lib/cpu.rs"